test/tests/language/types/string/ast/unicode_braces.txt
error: incomplete unicode escape sequence
 --> tests/language/types/string/ast/unicode_braces.tql:5:12
  |
5 | from {x: f"\u{0}"}
  |            ^^ 
  |
